force-app/main/default/objects/redwing__Batch_Operation_Record__c/redwing__Batch_Operation_Record__c.object-meta.xml
<CustomObject>
    <label>Batch Operation Record</label>
    <nameField>
        <displayFormat>BOPR-{0000000}</displayFormat>
        <label>Batch Operation Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Operation Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>