force-app/main/default/objects/redwing__Batch_Operation_Record__c/fields/redwing__Record_Key__c.field-meta.xml
<CustomField>
    <fullName>redwing__Record_Key__c</fullName>
    <externalId>true</externalId>
    <label>Record Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>