force-app/main/default/objects/redwing__Batch_Operation_Record__c/fields/redwing__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Record_Type__c</fullName>
    <label>Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>