force-app/main/default/objects/redwing__Batch_Operation_Record__c/fields/redwing__Training_Plan_Batch_Operation__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Plan_Batch_Operation__c</fullName>
    <label>Learning Plan Batch Operation</label>
    <referenceTo>redwing__Training_Plan_Batch_Operation__c</referenceTo>
    <relationshipLabel>Batch Operation Records</relationshipLabel>
    <relationshipName>Batch_Operation_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>